@@ -13,6 +13,7 @@ v9.4.0
 
 - BUG#37820231: Text based django ORM filters doesn't work with Connector/Python
 - BUG#37806057: Rename extra option (when installing wheel package) to install webauthn functionality dependencies
+- BUG#37627508: mysql/connector python fetchmany() has an off by one bug when argument given as 1
 - BUG#37047789: Python connector does not support Django enum
 - BUG#36452514: Missing version info resources
 - BUG#34950958: MySQL Python Connector doesn't work with ssh in the same process
